--- a/microbiome.diseasedatahub.org/manifest.json
+++ b/microbiome.diseasedatahub.org/manifest.json
@@ -7,7 +7,7 @@
     "arborist": "quay.io/cdis/arborist:2.4.0",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
     "fence": "quay.io/cdis/fence:4.15.0",
-    "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
+    "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
     "indexd": "quay.io/cdis/indexd:2.6.2",
     "manifestservice": "quay.io/cdis/manifestservice:master",
     "peregrine": "quay.io/cdis/peregrine:2.1.1",
